package BookStratagy;

public class NoCover implements CoverBehaviour{
    @Override
    public String cover() {
        return "No Cover";
    }
}
