package BookStratagy;

public class HardCover implements CoverBehaviour{
    @Override
    public String cover() {
        return "a Hard Cover";
    }

}
